Replace choice prompt with buttons

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <!-- link to external css style sheet -->
     <link rel="stylesheet" href="style.css">
     <!--  link to external javascript -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <h1>Rock Paper Scissors</h1>
-    <p>Open console to play</p>
+
+    <div id="player-choice">
+        <button id="rock-button">Rock</button>
+        <button id="paper-button">Paper</button>
+        <button id="scissors-button">Scissors</button>
+    </div>
+
+
 </body>
 
 </html>
