Add result and text UI

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <button id="scissors-button">Scissors</button>
     </div>
 
+    <div id="result">
+        <p id="message">Click on buttons above to play...</p>
+        <span>Player Score: </span>
+        <span id="player-score">1</span>
+        <br>
+        <span>Computer Score: </span>
+        <span id="computer-score">1</span>
+    </div>
 
 </body>
 
